# 30-minute-vibe-coding-challenge

./: .gitignore  IDEAS.md  NOTES.md  README.md  TESTING.md  cli.py  new.py  pyproject.toml  pytest.ini
.claude/: humanlayer.create_plan.md
projects/breath-training-app/: .env.example  CLAUDE.md  pyproject.toml
projects/breath-training-app/spec/: design.md  plan.md  requirements.md
projects/breath-training-app/src/: database.py  main.py
projects/breath-training-app/src/middleware/: auth_middleware.py
projects/breath-training-app/src/models/: __init__.py  pattern.py  session.py  user.py  user_preference.py  user_stats.py
projects/breath-training-app/src/schemas/: auth.py
projects/breath-training-app/src/services/: auth_service.py
projects/breath-training-app/src/utils/: security.py
projects/breath-training-app/static/css/: styles.css
projects/breath-training-app/tests/: conftest.py  test_auth.py  test_database.py  test_main.py
projects/travel-approval/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
projects/travel-approval/alembic/: env.py
projects/travel-approval/alembic/versions/: 20251109_2036-7a61fbaa49a4_initial_migration_add_all_tables.py  20251109_2112-c1acf9475eab_add_audit_log_table.py
projects/travel-approval/app/: __init__.py  config.py  database.py  main.py  seed_data.py
projects/travel-approval/app/auth/: dependencies.py  password.py  session.py
projects/travel-approval/app/models/: __init__.py  audit_log.py  notification.py  project.py  taccount.py  travel_request.py  user.py
projects/travel-approval/app/routers/: admin.py  approvals.py  auth.py  dashboard.py  notifications.py  reports.py  travel_requests.py
projects/travel-approval/app/schemas/: project.py  report.py  taccount.py  travel_request.py  user.py
projects/travel-approval/app/services/: audit_service.py  notification_service.py  project_service.py  reporting_service.py  travel_request_service.py
projects/travel-approval/app/templates/: 404.html  500.html  base.html  dashboard.html  login.html
projects/travel-approval/spec/: design.md  plan.md  requirements.md
projects/travel-approval/tests/: __init__.py  conftest.py  test_admin.py  test_approvals.py  test_audit.py  test_auth.py  test_database.py  test_e2e_workflow.py  test_error_handling.py  test_notification_service.py  test_notifications.py  test_project_service.py  test_reporting_service.py  test_reports.py  test_travel_request_schemas.py  test_travel_request_service.py  test_travel_requests.py
templates/fastapi-sqlite-jinja2/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  test.db
templates/fastapi-sqlite-jinja2/.claude/commands/: humanlayer.create_plan.md  humanlayer.research_codebase.md
templates/fastapi-sqlite-jinja2/migrations/: env.py
templates/fastapi-sqlite-jinja2/tests/: conftest.py  test_auth.py  test_database.py  test_todo_routes.py
(+106 files in other folders)
