[project]
name = "30-minute-vibe"
version = "0.1.0"
description = "CLI tool for bootstrapping 30 Minute Vibe Coding Challenge projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
vibe = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli.py"]

